// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Illustration of type Auth matches with snapshot 1`] = `
<svg
  class="illustration"
  data-testid="Auth"
>
  auth.svg
</svg>
`;

exports[`Illustration of type NoSelected matches with snapshot 1`] = `
<svg
  class="illustration"
  data-testid="NoSelected"
>
  paper.svg
</svg>
`;
